fix: horizontal scrolling

--- a/src/index.css
+++ b/src/index.css
@@ -45,6 +45,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   background-color: var(--main-background-color);
   line-height: 1.6em;
+  overflow-x: hidden;
 }
 
 button {
